# comp-shader-ray-tracer

./: CMakeLists.txt  README.md  app  fragment_shader.glsl  shader.comp  vertex_shader.glsl
include/glad/: glad.h
src/: glad.c  main.cpp
